--- a/Html/music.html
+++ b/Html/music.html
@@ -32,7 +32,7 @@
         </div>
         <h4>February</h4>
         <div class="details">
-            <a href="../Image/greg.jpg"class="floatleft"><img src="../Image/gregthumb.jpg" alt="Greg" height="" width=""></a>
+            <a href="../image/greg.jpg"class="floatleft"><img src="../Image/gregthumb.jpg" alt="Greg" height="" width=""></a>
             Tahoe Greg is back from his tour. New songs. New stories.
         </div>
       </main>
