--- a/Html/music.html
+++ b/Html/music.html
@@ -27,12 +27,12 @@
         </p>
         <h4>January</h4>
         <div class="details">
-            <a href="../Image/melanie.jpg"class="floatleft"><img src="../Image/melaniethumb.jpg" alt="Melanie" height="" width=""></a>
+            <a href="../image/melanie.jpg"class="floatleft"><img src="../image/melaniethumb.jpg" alt="Melanie" height="" width=""></a>
             Melanie Morris entertains with her melodic folk style.
         </div>
         <h4>February</h4>
         <div class="details">
-            <a href="../image/greg.jpg"class="floatleft"><img src="../Image/gregthumb.jpg" alt="Greg" height="" width=""></a>
+            <a href="../image/greg.jpg"class="floatleft"><img src="../image/gregthumb.jpg" alt="Greg" height="" width=""></a>
             Tahoe Greg is back from his tour. New songs. New stories.
         </div>
       </main>
